--- a/blocks/places/__image/places__image.css
+++ b/blocks/places/__image/places__image.css
@@ -2,4 +2,6 @@
     grid-row: 2;
     grid-column: 1;
     width: 100%;
+    padding: 0;
+    margin:0;
 }
