--- a/blocks/places/__title/places__title.css
+++ b/blocks/places/__title/places__title.css
@@ -20,6 +20,9 @@
 
 @media screen and (max-width: 760px) {
     .places__title{
+        padding: 0;
+        margin: 0;
         padding-left: 16px;
+        width: 60%;
     }
 }
