--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -18,12 +18,6 @@
 
 @media screen and (max-width: 768px) {
     .places {
-        width: max(
-            320px,
-            min(
-                720px,
-                calc(320px + 400 * ((100vw - 320px) / 448))
-            )
-        );
+        width: 100%
     }
 }
